ortho_config/tests/ui/invalid_cli_short.rs
use ortho_config::OrthoConfig;

#[derive(OrthoConfig)]
struct Bad {
    #[ortho_config(cli_short = '?')]
    field: String,
}
